@startuml
'https://plantuml.com/class-diagram
class Artist
class Album
class Song
interface Playable

Playable <|-- Artist
Playable <|-- Album
Playable <|-- Song

Player *-- Playlist

Artist *-- Album
Album *-- Song

Artist : - String artistName
Artist : - Arraylist<Album>

Album : - Artist artist
Album : - String albumTitle
Album : - Arraylist<Song>

Song : - String songTile

Playable : void play()
Playable : void pause()
@enduml